--- a/main.html
+++ b/main.html
@@ -7,125 +7,86 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
-		<table class="main-table">
-        <caption>Main Table</caption>
-        <thead>
-            <tr>
-                <th>Main Table Header 1</th>
-                <th>Main Table Header 2</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Nested Table 1</th>
-                                <th>Column 1</th>
-                                <th>Column 2</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Row 1</td>
-                                <td>Row 1</td>
-                                <td>Row 1</td>
-                            </tr>
-                            <tr>
-                                <td>Row 2</td>
-                                <td>Row 2</td>
-                                <td>Row 2</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-                <td>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Nested Table 2</th>
-                                <th>Column 1</th>
-                                <th>Column 2</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Row 1</td>
-                                <td>Row 1</td>
-                                <td>Row 1</td>
-                            </tr>
-                            <tr>
-                                <td>Row 2</td>
-                                <td>Row 2</td>
-                                <td>Row 2</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Nested Table 3</th>
-                                <th>Column 1</th>
-                                <th>Column 2</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Row 1</td>
-                                <td>Row 1</td>
-                                <td>Row 1</td>
-                            </tr>
-                            <tr>
-                                <td>Row 2</td>
-                                <td>Row 2</td>
-                                <td>Row 2</td>
-                            </tr>
-                            <tr>
-                                <td colspan="3">
-                                    <ul>
-                                        <li>List item 1</li>
-                                        <li>List item 2</li>
-                                        <li>List item 3</li>
-                                    </ul>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-                <td>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Nested Table 4</th>
-                                <th>Column 1</th>
-                                <th>Column 2</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Row 1</td>
-                                <td style="background-color: black; color: white;">HTML</td>
-                                <td>Row 1</td>
-                            </tr>
-                            <tr>
-                                <td>Row 2</td>
-                                <td>Row 2</td>
-                                <td>Row 2</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
-        </tbody>
+    
+		  <h1>Tables in Tables</h1>
+
+    <!-- Main Table -->
+    <table>
+        <tr>
+            <th>Main Table Header 1</th>
+            <th>Main Table Header 2</th>
+        </tr>
+        <tr>
+            <td>
+                <!-- Nested Table 1 -->
+                <table>
+                    <tr>
+                        <th>Nested Table 1</th>
+                        <th>Column 1</th>
+                        <th>Column 2</th>
+                    </tr>
+                    <tr>
+                        <td>Cell 1</td>
+                        <td>Cell 2</td>
+                        <td>Cell 3</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <!-- Nested Table 2 -->
+                <table>
+                    <tr>
+                        <th>Nested Table 2</th>
+                        <th>Column 1</th>
+                        <th>Column 2</th>
+                    </tr>
+                    <tr>
+                        <td>List:</td>
+                        <td colspan="2">
+                            <!-- List in Nested Table 2 -->
+                            <ul>
+                                <li>List item 1</li>
+                                <li>List item 2</li>
+                                <li>List item 3</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <!-- Nested Table 3 -->
+                <table>
+                    <tr>
+                        <th>Nested Table 3</th>
+                        <th>Column 1</th>
+                        <th>Column 2</th>
+                    </tr>
+                    <tr>
+                        <td>HTML</td>
+                        <td class="black-background" colspan="2">HTML</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <!-- Nested Table 4 -->
+                <table>
+                    <tr>
+                        <th>Nested Table 4</th>
+                        <th>Column 1</th>
+                        <th>Column 2</th>
+                    </tr>
+                    <tr>
+                        <td>Cell 1</td>
+                        <td>Cell 2</td>
+                        <td>Cell 3</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
     </table>
 
-    </table>
-  </body>
+
+    </body>
 </html>
