--- a/main.html
+++ b/main.html
@@ -9,84 +9,64 @@
   <body>
     
 		  <h1>Tables in Tables</h1>
-
-    <!-- Main Table -->
-    <table>
-        <tr>
-            <th>Main Table Header 1</th>
-            <th>Main Table Header 2</th>
-        </tr>
-        <tr>
-            <td>
-                <!-- Nested Table 1 -->
-                <table>
-                    <tr>
-                        <th>Nested Table 1</th>
-                        <th>Column 1</th>
-                        <th>Column 2</th>
-                    </tr>
-                    <tr>
-                        <td>Cell 1</td>
-                        <td>Cell 2</td>
-                        <td>Cell 3</td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <!-- Nested Table 2 -->
-                <table>
-                    <tr>
-                        <th>Nested Table 2</th>
-                        <th>Column 1</th>
-                        <th>Column 2</th>
-                    </tr>
-                    <tr>
-                        <td>List:</td>
-                        <td colspan="2">
-                            <!-- List in Nested Table 2 -->
-                            <ul>
-                                <li>List item 1</li>
-                                <li>List item 2</li>
-                                <li>List item 3</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <!-- Nested Table 3 -->
-                <table>
-                    <tr>
-                        <th>Nested Table 3</th>
-                        <th>Column 1</th>
-                        <th>Column 2</th>
-                    </tr>
-                    <tr>
-                        <td>HTML</td>
-                        <td class="black-background" colspan="2">HTML</td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <!-- Nested Table 4 -->
-                <table>
-                    <tr>
-                        <th>Nested Table 4</th>
-                        <th>Column 1</th>
-                        <th>Column 2</th>
-                    </tr>
-                    <tr>
-                        <td>Cell 1</td>
-                        <td>Cell 2</td>
-                        <td>Cell 3</td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-
-
+		<table>
+			<tr>
+				<td>
+					<table>
+						<tr>
+							<td colspan="2" >Nested Table 2</td>
+						</tr>
+						<tr>
+							<td>Column 1</td>
+							<td>Column 2</td>
+						</tr>
+						<tr>
+							<td>abc</td>
+							<td>def</td>
+						</tr>
+					</table>
+				</td>
+				<td>
+					<table>
+						<tr>
+							<td colspan="2">Nested Table 1</td>
+						</tr>
+						<tr>
+							<td>
+								<ul>
+									<li>List item</li>
+									<li>List item</li>
+									<li>List item</li>
+								</ul>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<table>
+						<tr >
+							<td colspan="2" >Nested Table 3</td>
+						</tr>
+						<tr>
+							<td>Nested Table</td>
+							<td>Demo Continued</td>
+						</tr>
+					</table>
+				</td>
+				<td>
+					<table>
+						<tr>
+							<td>Nested Table 4</td>
+						</tr>
+						<tr>
+							<td id="res">HTML</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+	  
     </body>
 </html>
